--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "googleapis": "^108.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.11.0",
