--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -12,12 +12,16 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "cookie": "^0.5.0",
+    "emoji-picker-react": "^4.4.5",
     "formik": "^2.2.9",
     "js": "^0.1.0",
     "js-cookie": "^3.0.1",
+    "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-date-picker": "^9.0.0",
     "react-dom": "^17.0.2",
+    "react-easy-crop": "^4.6.3",
+    "react-moment": "^1.1.2",
     "react-redux": "^8.0.4",
     "react-responsive": "^9.0.0",
     "react-router-dom": "^6.4.2",
