--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@iconscout/react-unicons": "^1.1.6",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.11",
     "@testing-library/jest-dom": "^5.16.2",
@@ -21,15 +22,17 @@
     "react-date-picker": "^9.0.0",
     "react-dom": "^17.0.2",
     "react-easy-crop": "^4.6.3",
+    "react-input-emoji": "^4.3.0",
     "react-moment": "^1.1.2",
     "react-redux": "^8.0.4",
-    "react-responsive": "^9.0.0",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.0",
     "react-spinners": "^0.13.6",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "sass": "^1.55.0",
+    "socket.io-client": "^4.5.4",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
